--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "vite",
+    "build": "vite build",
     "lint": "eslint",
+    "preview": "vite preview",
+    "start": "vite preview",
     "format": "prettier --write ."
   },
   "dependencies": {
@@ -16,10 +17,9 @@
     "@tanstack/react-query": "^5.90.16",
     "axios": "^1.13.2",
     "lucide-react": "^0.562.0",
-    "next": "16.1.1",
-    "nextjs-toploader": "^3.9.17",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-router-dom": "^7.1.3",
     "sonner": "^2.0.7",
     "sooner": "^1.1.4",
     "zod": "^4.3.5"
@@ -27,9 +27,10 @@
   "devDependencies": {
     "@types/node": "25.0.3",
     "@types/react": "19.2.7",
+    "@vitejs/plugin-react": "^4.3.4",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.1.1",
-    "prettier": "^3.7.4"
+    "prettier": "^3.7.4",
+    "vite": "^6.0.7"
   }
 }
